--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -24,6 +24,7 @@
     "grunt-bg-shell": "^2.3.3"
   },
   "dependencies": {
+    "cached-path-relative": "^1.0.2",
     "json-server": "^0.14.2"
   }
 }
